--- a/Project1/style.css
+++ b/Project1/style.css
@@ -53,11 +53,11 @@ body {
 
 @media (max-width: 480px) {
   .container {
-    width: 100vw;
+    width: 90vw;
   }
 
-  .panel:nth-of-type(4),
+  /* .panel:nth-of-type(4),
   .panel:nth-of-type(5) {
     display: none;
-  }
+  } */
 }
